Fixed experience section spacing issue.

--- a/src/App.css
+++ b/src/App.css
@@ -178,6 +178,7 @@ section {
   padding-left: 100px;
   padding-right: 100px;
   min-height: 100vh;
+  margin-bottom: -42px;
 }
 .experience-container h2 {
   color: #FFFFFF;
